--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-server": "^0.2.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "webpack": "^4.12.0"
   }
 }
