--- a/package.json
+++ b/package.json
@@ -23,7 +23,18 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-jshint": "^2.1.0",
     "gulp-less": "^3.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.3.0",
+    "gulp-rev-append": "^0.1.8",
+    "gulp-sequence": "^1.0.0",
+    "gulp-uglify": "^3.0.0",
     "webpack": "^4.12.0"
   }
 }
