--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^2.2.0",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-less": "^0.2.0",
@@ -35,6 +36,9 @@
     "gulp-rev-append": "^0.1.8",
     "gulp-sequence": "^1.0.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
     "webpack": "^4.12.0"
   }
 }
