--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hexo-site",
   "version": "0.0.0",
+  "license": "ISC",
   "private": true,
   "hexo": {
     "version": "3.7.1"
@@ -31,6 +32,7 @@
     "gulp-less": "^3.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^3.2.0",
+    "gulp-path": "^3.0.3",
     "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.3.0",
     "gulp-rev-append": "^0.1.8",
@@ -38,7 +40,6 @@
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
     "jshint": "^2.9.5",
-    "jshint-stylish": "^2.2.1",
-    "webpack": "^4.12.0"
+    "jshint-stylish": "^2.2.1"
   }
 }
