--- a/package.json
+++ b/package.json
@@ -1,43 +1,52 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "hexo-theme-snippet",
+  "version": "1.0.0",
+  "description": "Never simple and happy",
+  "homepage": "https://sweida.github.io",
+  "author": {
+    "name": "shenliyang",
+    "email": ""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shenliyang/hexo-theme-snippet"
+  },
   "license": "ISC",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.3.9"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
-    "hexo-abbrlink": "^2.0.5",
-    "hexo-asset-image": "0.0.3",
+    "ejs": "^1.0.0",
+    "hexo": "^3.3.8",
+    "hexo-abbrlink": "^2.0.4",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
+    "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^2.2.0",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-less": "^0.2.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-marked": "^0.2.10",
+    "hexo-server": "^0.2.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-jshint": "^2.1.0",
-    "gulp-less": "^3.5.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-htmlclean": "^2.7.15",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.2",
     "gulp-minify-css": "^1.2.4",
-    "gulp-notify": "^3.2.0",
+    "gulp-notify": "^3.0.0",
     "gulp-path": "^3.0.3",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.8",
-    "gulp-sequence": "^1.0.0",
-    "gulp-uglify": "^3.0.0",
+    "gulp-sequence": "^0.4.6",
+    "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1"
