--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 施伟达's Blog
+title: Start Here
 subtitle:
 description: 个人技术学习分享博客，前端技术分享
 keywords: 技术博客,前端技术
